--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -256,6 +256,16 @@
 				}
 			}
 		}
+
+		.comment-respond {
+			.comment-reply-title {
+				margin-top: 40px;
+			}
+
+			.comment-form-rating {
+				margin: 30px 0;
+			}
+		}
 	}
 
 	.related {
