--- a/style.css
+++ b/style.css
@@ -471,7 +471,8 @@ table {
 button,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
+input[type="submit"],
+.woocommerce #respond input#submit {
   border: 2px solid;
   border-color: #ebebeb;
   background: #fff;
@@ -492,7 +493,8 @@ input[type="submit"] {
   button:hover,
   input[type="button"]:hover,
   input[type="reset"]:hover,
-  input[type="submit"]:hover {
+  input[type="submit"]:hover,
+  .woocommerce #respond input#submit:hover {
     background: #fff;
     border-color: #24c48a;
     color: #24c48a; }
@@ -504,7 +506,9 @@ input[type="submit"] {
   input[type="reset"]:active,
   input[type="reset"]:focus,
   input[type="submit"]:active,
-  input[type="submit"]:focus {
+  input[type="submit"]:focus,
+  .woocommerce #respond input#submit:active,
+  .woocommerce #respond input#submit:focus {
     border-color: #24c48a;
     color: #24c48a; }
 
