--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -71,8 +71,22 @@
 
 				&:last-child {
 					display: none;
+
+					path {
+						@include animation( spin 2s linear infinite );
+						@include transform-origin( 50% 50% );
+					}
 				}
 			}
 		}
+	}
+}
+
+@include keyframes( spin ) {
+	from {
+		@include transform( rotate( 0deg ) );
+	}
+	to {
+		@include transform( rotate( 360deg ) );
 	}
 }
