--- a/woocommerce.css
+++ b/woocommerce.css
@@ -217,7 +217,7 @@
     .woocommerce ul.products li.product .loop-product-thumbnail .add_to_cart_button {
       background: #fff;
       border: 2px solid #fff;
-      bottom: 20%;
+      bottom: 30%;
       color: #2d2d2d; }
       .woocommerce ul.products li.product .loop-product-thumbnail .add_to_cart_button:hover {
         border: 2px solid #2d2d2d; }
@@ -230,10 +230,34 @@
       background: transparent;
       border: 2px solid #fff;
       color: #fff;
-      top: 20%; }
+      top: 30%; }
       .woocommerce ul.products li.product .loop-product-thumbnail .product-quick-view-button:hover {
         background: #fff;
         color: #2d2d2d; }
+    .woocommerce ul.products li.product .loop-product-thumbnail a.added_to_cart {
+      background: #fff;
+      border: 2px solid #fff;
+      border-bottom: 0;
+      bottom: 0;
+      box-sizing: border-box;
+      color: #626262;
+      font-family: "Lato", sans-serif;
+      font-size: 13px;
+      left: 50%;
+      letter-spacing: 1px;
+      line-height: normal;
+      margin: 0;
+      padding: 12px 15px;
+      position: absolute;
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      -o-transform: translateX(-50%);
+      transform: translateX(-50%);
+      text-transform: uppercase; }
+      .woocommerce ul.products li.product .loop-product-thumbnail a.added_to_cart:hover {
+        border: 2px solid #2d2d2d;
+        border-bottom: 0; }
 
 .woocommerce .woocommerce-pagination .page-numbers {
   border: none; }
