WooCommerce demo store support

--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -1,3 +1,7 @@
+.woocommerce-demo-store #page {
+	margin-top: 57px;
+}
+
 .woocommerce-page #container {
 	float: right;
 	margin: 0 0 0 (-$size__site-sidebar);
