--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1,9 +1,6 @@
 /*--------------------------------------------------------------
 # WooCommerce Layout
 --------------------------------------------------------------*/
-.woocommerce-demo-store #page {
-  margin-top: 57px; }
-
 .woocommerce-page #container {
   float: right;
   margin: 0 0 0 -25.61404%;
@@ -49,6 +46,15 @@
   float: none;
   margin: 0;
   width: auto; }
+
+.woocommerce-demo-store #page {
+  margin-top: 57px; }
+
+@media (max-width: 480px) {
+  .admin-bar p.demo_store {
+    top: 0 !important; }
+  .woocommerce-demo-store #page {
+    margin-top: 0; } }
 
 /*--------------------------------------------------------------
 # WooCommerce Archive
