--- a/woocommerce.css
+++ b/woocommerce.css
@@ -50,9 +50,15 @@
 .woocommerce-demo-store #page {
   margin-top: 57px; }
 
+@media (max-width: 782px) {
+  .admin-bar p.demo_store {
+    top: 46px !important; } }
+
 @media (max-width: 480px) {
   .admin-bar p.demo_store {
-    top: 0 !important; }
+    top: 0 !important; } }
+
+@media (max-width: 480px) {
   .woocommerce-demo-store #page {
     margin-top: 0; } }
 
