--- a/style.css
+++ b/style.css
@@ -2122,6 +2122,7 @@ a {
   display: block;
   font-size: 13.8656px;
   font-size: 0.8666rem;
+  font-weight: 700;
   line-height: normal;
   margin-bottom: .5em; }
 
