--- a/woocommerce.css
+++ b/woocommerce.css
@@ -451,18 +451,25 @@
   .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li {
     background: transparent;
     border: none;
+    font-family: "Lato", sans-serif;
     font-size: 12px;
+    letter-spacing: 1px;
     margin: 0;
     margin-right: 30px;
     padding: 0; }
     .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li.active {
       border-bottom: 2px solid #626262; }
+      .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li.active a {
+        color: #2d2d2d; }
     .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li:before, .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li:after {
       border: none;
       box-shadow: none; }
+    .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs li a {
+      color: #adadad; }
 
 .woocommerce.single-product #content div.product #reviews #comments .woocommerce-Reviews-title {
-  font-size: 18px; }
+  font-size: 18px;
+  margin: 30px 0 5px; }
 
 .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment {
   padding: 25px 0;
@@ -471,22 +478,28 @@
     border-radius: 50%;
     border-width: 0;
     padding: 0;
-    top: 25px;
-    width: 60px; }
+    top: 30px;
+    width: 70px; }
   .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text {
     border-width: 0;
-    margin-left: 75px;
+    margin-left: 95px;
     padding: 0; }
     .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .comment-meta {
       color: #adadad; }
       .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .comment-meta .comment-author {
         color: #2d2d2d;
+        font-size: 14px;
         margin-bottom: 0; }
       .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .comment-meta .comment-date {
+        color: #adadad;
+        font-size: 13px;
         margin-bottom: 5px; }
+    .woocommerce.single-product #content div.product #reviews #comments ol.commentlist li.comment .comment_container .comment-text .description {
+      font-size: 14px; }
 
 .woocommerce.single-product #content div.product #reviews .comment-respond .comment-reply-title {
-  margin-top: 40px; }
+  display: block;
+  margin: 33px 0 7px; }
 
 .woocommerce.single-product #content div.product #reviews .comment-respond .comment-form-rating {
   margin: 30px 0; }
