--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -280,7 +280,7 @@
 			}
 		}
 
-		.comment-respond {
+		#respond {
 
 			.comment-reply-title {
 				display: block;
@@ -324,8 +324,8 @@
 			}		
 
 			.form-submit {
-				margin-bottom: 49px; 
-			}	
+				margin-bottom: 49px;			
+			}
 		}
 	}
 
